<resources>
    <string name="app_name">F3 Fitness</string>
    <string name="title_activity_login">Login</string>

    <!-- Main page strings, note some activities may use same strings-->
    <string name="action_steptracker">Progress Page</string>
    <string name="calculator">Calorie Calculator</string>
    <string name="action_setting">Setting</string>
    <string name="action_details">My Details</string>
    <string name="action_logout">Logout</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_re_enter_password">Re-enter password</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login">Log in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_tomorrow">Tomorrow</string>
    <string name="action_yesterday">Yesterday</string>
    <string name="action_i_have_read">I have read the following</string>
    <string name="action_main">Main</string>
    <string name="action_me">Me</string>
    <string name="title_you_have_ran">You have ran:</string>
    <string name="you_have_burned">You have currently burned:</string>
    <string name="kcal">kcal</string>
    <string name="title_steps">steps</string>
    <string name="help">Help</string>
    <string name="setting">Setting</string>
    <string name="week_bar">Week bar</string>
    <string name="day_bar">Day bar</string>
    <string name="step_Count">Steps current taken: </string>

    <!-- step tracker page -->
    <string name="today_step">Steps taken Today: </string>
    <string name="today_calorie">Calories Burnt Today: </string>
    <string name="title_activity_self_edit">SelfEdit</string>

    <!-- Calorie Calculator page -->
    <string name="daily_intake">Recommended Daily Calorie Intake: </string>
    <string-array name="spinner">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
