<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage">

    <TextView
        android:id="@+id/stepCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:text="@string/step_Count"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/calorieBurnt"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/calorieBurnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:text="@string/you_have_burned"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="350dp"
        android:layout_height="161dp"
        android:layout_marginBottom="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/stepTracker_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:onClick="onStepTrack"
                android:text="@string/action_steptracker"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="134dp" />

            <Button
                android:id="@+id/userDetails"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:onClick="onDetails"
                android:text="@string/action_details"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:onClick="onCalculator"
                android:text="@string/calculator"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
                android:textSize="18sp" />

            <Button
                android:id="@+id/me_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:onClick="onLogout"
                android:text="Logout"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
                android:textSize="18sp" />

        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="229dp"
        android:layout_height="180dp"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/f3" />

</android.support.constraint.ConstraintLayout>